fix: i18n key update

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
   "Shot": "Shot",
   "Coffee / Tea": "Coffee / Tea",
   "Homemade Liqueur": "Homemade Liqueur",
-  "Punch / Party drink": "Punch / Party drink",
+  "Punch / Party Drink": "Punch / Party drink",
   "Beer": "Beer",
   "Soft Drink": "Soft drink",
   "drink-name": "Drink Name",
