feat: corecard component button text i18n translate

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,5 +14,6 @@
   "Beer": "Beer",
   "Soft Drink": "Soft drink",
   "drink-name": "Drink Name",
-  "category": "Category"
+  "category": "Category",
+  "close": "Close"
 }
